<resources>
    <!-- Application name -->
    <string name="app_name">Drebedengi Analyzer</string>

    <!-- Activities titles -->
    <string name="title_activity_search_form">SearchFormActivity</string>
    <string name="title_activity_choose_database_file">ChooseDatabaseFileActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_request_choice">Choose action</string>

    <!-- SplashScreenActivity -->

    <!-- SearchFormActivity -->
    <string name="sumModeAny">Any sum</string>
    <string name="sumModeLess">Less than</string>
    <string name="sumModeEqual">Equal</string>
    <string name="sumModeGreater">Greater than</string>

    <!-- RequestChoiceActivity -->
    <string name="label_choose_action">Choose action:</string>
    <string name="label_incomes">For incomes</string>
    <string name="label_expenses">For expenses</string>

    <string name="button_search">Search</string>
    <string name="button_category_report">Category report</string>
    <string name="button_report">Full report</string>

    <!-- -->

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchHintSum">Sum</string>
    <string name="searchHintComment">Comment</string>
    <string name="searchHintFromDate">Date from</string>
    <string name="searchHintTill">Date to (exclusive)</string>
    <string name="searchFindButton">Find</string>
    <string name="choosedbHintPath">Enter a path to db file</string>
    <string name="choosedbBtnConfirm">Confirm</string>
    <string name="choosedbTxtFileNotFound">File doesn\'t exist</string>
    <string name="choosedbTxtIsNotAFile">Entered path links to a directory. Please enter path to db file</string>
    <string name="searchResultNothing">Nothing found</string>

    <!-- ChooseDatabaseFileActivity -->
    <string name="chooseDbLabel">Choose database</string>
    <string name="nothingFoundLabel">Nothing found</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="findDataBasesLabel">Find databases</string>
    <string name="enterPathLabel">Enter path to the database file</string>

    <!-- SearchResultActivity -->
    <string name="totalByCategory">Total by category %s</string>
    <string name="title_activity_my">MyActivity</string>

    <!-- Spinners -->
    <string name="spinner_spacer_zero" />
    <string name="spinner_spacer">"      "</string>
    <string name="spinner_hint_currency">Currency</string>
    <string name="spinner_hint_money_place">Money place</string>
    <string name="spinner_hint_expense_category">Category</string>

</resources>
