<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gmail.maxdiland.drebedengireports.activity.SearchFormActivity"
    android:id="@+id/llContainer"
    android:animateLayoutChanges="true"
    >

    <LinearLayout style="@style/LinearLayoutSimpleFormRow">

        <Spinner
            android:id="@+id/sSumMode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            style="@style/Spinner"
            />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutSimpleFormRow">

        <Spinner
            android:id="@+id/sMoneyPlace"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            style="@style/Spinner"
            />

        <Spinner
            android:id="@+id/sExpensesCategory"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            style="@style/Spinner"
            />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutSimpleFormRow">

        <EditText
            android:id="@+id/etFromDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/searchHintFromDate"
            android:inputType="date"
            android:onClick="pickFromDate"
            style="@style/EditText"
            />

        <EditText
            android:id="@+id/etToDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/searchHintTill"
            android:inputType="date"
            android:onClick="pickTillDate"
            style="@style/EditText"
            />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutSimpleFormRow">
        <EditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:hint="@string/searchHintComment"
            style="@style/EditText"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchFindButton"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:onClick="findRecords"
        />
</LinearLayout>
